--- a/ImageFusion/home_app/templates/index.html
+++ b/ImageFusion/home_app/templates/index.html
@@ -21,6 +21,26 @@
     <link rel="icon" href="{% static 'favicon.ico' %}">
 
     <title>Image Fusion</title>
+
+    <style>
+        body::-webkit-scrollbar, div::-webkit-scrollbar{
+            width: 12px;
+        }
+
+        body::-webkit-scrollbar-track, div::-webkit-scrollbar-track{
+            border: 7px solid white;
+            box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+        }
+
+        body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb{
+            background: linear-gradient(0deg, rgba(92, 184, 92, 1) 15%, rgba(92, 184, 92, 1) 95%);
+            border-radius: 0px;
+        }
+
+        body::-webkit-scrollbar-thumb:hover, div::-webkit-scrollbar-thumb:hover{
+            background: linear-gradient(0deg, rgba(92, 184, 92, 1) 15%, rgba(92, 184, 92, 1) 95%);
+        }
+    </style>
 </head>
 <body>
     <!-- header of home page -->
@@ -39,10 +59,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'home'%}"><span class="text-white bg-secondary p-1 rounded" >Home</span></a>
+                                <a class="nav-link" aria-current="page" href="{% url 'home'%}"><span class="text-white bg-secondary p-1 rounded">Home</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'upload_images' %}"><span class="text-white bg-secondary p-1 rounded" >Upload Image</span></a>
+                                <a class="nav-link" aria-current="page" href="{% url 'upload_images' %}"><span class="text-white bg-secondary p-1 rounded" >Image Processing</span></a>
                             </li>
                             {% if user.is_authenticated %}
                                 <li class="nav-item">
