--- a/ImageFusion/templates/index.html
+++ b/ImageFusion/templates/index.html
@@ -59,40 +59,46 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'home'%}"><span class="text-white bg-success p-1 rounded "> <i class="fas fa-home"></i> Home</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'upload_images'%}"><span class="text-white bg-success p-1 rounded"> <i class="fas fa-images"></i> Upload Images</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{% url 'image_processing' %}"><span class="text-white bg-success p-1 rounded" > <i class="fas fa-magic"></i> Image Fusion</span></a>
-                            </li>
-                            {% if user.is_authenticated %}
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page"><span class='bg-success text-white p-1 rounded'> <i class="fas fa-user-circle"></i> {{user.username}}</span></a>
+                    <div class="collapse navbar-collapse mx-auto" id="navbarSupportedContent">
+                        <div class='mx-auto'>
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item ">
+                                    <a class="nav-link" aria-current="page" href="{% url 'home'%}"><span class="text-white bg-success p-1 rounded "> <i class="fas fa-home"></i> Home</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page">
-                                        <form method="post" action="{% url 'account_logout' %}" >
-                                            {% csrf_token %}
-                                            {% if redirect_field_value %}
-                                                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-                                            {% endif %}
-                                            <button class='bg-danger text-white rounded border-0'>
-                                                <i class="fas fa-sign-out-alt"></i> Logout
-                                            </button>
-                                        </form>
-                                    </a>
+                                    <a class="nav-link" aria-current="page" href="{% url 'upload_images'%}"><span class="text-white bg-success p-1 rounded"> <i class="fas fa-images"></i> Upload Images</span></a>
                                 </li>
-                            {% else %}
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="{% provider_login_url 'google' %}"><span class="text-white bg-danger p-1 rounded" > <i class="fab fa-google"></i> Login with Google+</span></a>
+                                    <a class="nav-link" aria-current="page" href="{% url 'image_processing' %}"><span class="text-white bg-success p-1 rounded" > <i class="fas fa-magic"></i> Image Fusion</span></a>
                                 </li>
-                            {% endif %}
-                        </ul>
+                            </ul>
+                        </div>
+                        <div class='d-flex'>
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                {% if user.is_authenticated %}
+                                    <li class="nav-item">
+                                        <a class="nav-link " aria-current="page"><span class='bg-success text-white p-1 rounded'> <i class="fas fa-user-circle"></i> {{user.username}}</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link " aria-current="page">
+                                            <form method="post" action="{% url 'account_logout' %}" >
+                                                {% csrf_token %}
+                                                {% if redirect_field_value %}
+                                                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                                                {% endif %}
+                                                <button class='bg-danger text-white rounded border-0'>
+                                                    <i class="fas fa-sign-out-alt"></i> Logout
+                                                </button>
+                                            </form>
+                                        </a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link " aria-current="page" href="{% provider_login_url 'google' %}"><span class="text-white bg-danger p-1 rounded" > <i class="fab fa-google"></i> Login with Google+</span></a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </nav>
