--- a/ImageFusion/templates/home_app/uploadImage.html
+++ b/ImageFusion/templates/home_app/uploadImage.html
@@ -24,53 +24,55 @@
             <div class='container mt-5 mb-5 p-3 rounded bg-warning'>
                 <div class='rounded fw-bold mb-1 fs-3 text-black'>Your Uploaded Images</div>
                 <div class='container p-2 my-2 rounded bg-white fs-5'> 
-                    <a href="{% url 'delete-all-images' %}" class='btn btn-danger badge'> <i class="fas fa-trash-alt"></i> Delete All</a>
+                    <div class='row'>
+                        <div class='col'>
+                            <input class="upload_image_search ps-2" onkeyup="UploadSearchFunction()" id ="search" type="search" placeholder="Search Image" aria-label="Search" />
+                        </div>
+                        <div class="col-auto">
+                            <a href="{% url 'delete-all-images' %}" class='btn btn-danger text-right'> <i class="fas fa-trash-alt"></i> Delete All</a>
+                        </div>
+                    </div>
                 </div>
                 <div class='container p-3 rounded bg-white' style='height:530px; overflow:auto;'>
                     {% if all_images %}
                         <div class='row'>
-                            <div class="col">
-                                <input class="form-control  " onkeyup="SearchFunction()" id ="search" type="search" placeholder="Search" aria-label="Search">
-                            </div>    
-                        </div>
-                        <div class='row'>
                             {% for i in all_images %}
-                                <div class='col-md-3 col-sm-6 col-12 photo'>
-                                    <div class='card-img bg-dark p-2 m-1 rounded'>
-                                        <div>
-                                            <a href="{% url 'delete-image' i.id %}" class='btn btn-danger badge mb-1'><i class="fas fa-trash-alt"></i></a>
+                                <div class='col-md-3 col-sm-6 col-12 photo my-2'>
+                                    <!-- Card -->
+                                        <div class="card bg-dark " >
+                                            <a href="{{i.images.url}}">
+                                                <img src="{{i.images.url}}" class="card-img-top" alt="{{i.images.name}}"/>
+                                            </a>
+                                            <div class="card-body">
+                                                <div class='text-white mt-1 '>
+                                                    <div class="row my-1">
+                                                        <div class="col-auto">
+                                                            <span class="bg-light text-dark rounded px-1">Name</span>
+                                                        </div>
+                                                        <div class="col-auto">
+                                                            <span class="text-white photoName">{{i.images.name}}</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row my-1">
+                                                        <div class="col-auto">
+                                                            <span class="bg-light text-dark rounded px-1">Size</span>
+                                                        </div>
+                                                        <div class="col-auto">
+                                                            <span class="text-white">{{i.images.size}} bytes</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row mt-3">
+                                                        <div class="col d-grid">
+                                                            <a href="{% url 'delete-image' i.id %}" class='btn btn-danger badge'><i class="fas fa-trash-alt"></i> Delete</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <a href="{{i.images.url}}">
-                                            <img src="{{i.images.url}}" alt="Image" width='100%' height='100%' class="rounded">
-                                        </a>
-                                        <div class='text-white mt-1 '>
-                                            <span class='bg-warning text-dark px-1 rounded'>Name</span>
-                                            <br/>
-                                            <span class='text-white px-1 rounded text-wrap photoName'>{{i.images.name}}</span>
-                                            <br>
-                                            <span class='bg-warning text-dark px-1 rounded'>Size</span>
-                                            <br/>
-                                            <span class='text-white px-1 rounded text-wrap'>{{i.images.size}} bytes</span>
-                                        </div>
-                                    </div>
+                                    <!-- Card -->>
                                 </div>
                             {% endfor %}
                         </div>
-                        <script>
-                            function SearchFunction(){
-                                var filter = document.getElementById('search').value.toUpperCase();
-                                var CardElement = document.getElementsByClassName('photo');
-                                var PhotoNameElement = document.getElementsByClassName('photoName');
-                                for(i = 0; i < CardElement.length; i++){
-                                    var PhotoName = PhotoNameElement[i].innerText.toUpperCase();
-                                    if(PhotoName.indexOf(filter)>-1){
-                                        CardElement[i].style.display = "";
-                                    }else{
-                                        CardElement[i].style.display = "none";
-                                    }
-                                }
-                            }
-                        </script>
                     {% else %}
                         <div class='container-fluid bg-danger text-white fs-4 fw-bold p-1 rounded'>
                             <center>You should <span class='bg-white text-danger rounded px-1'>Upload Images !</span></center>
