--- a/ImageFusion/templates/home_app/uploadImage.html
+++ b/ImageFusion/templates/home_app/uploadImage.html
@@ -69,7 +69,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    <!-- Card -->>
+                                    <!-- Card -->
                                 </div>
                             {% endfor %}
                         </div>
